# name-o-tron-9000

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  package-lock.json  package.json  requirements-docs.txt  tsconfig.json  vite.config.ts
dev_docs/: README.md  appendix.md  appendix_api.md  appendix_architecture.md  appendix_build.md  mock-backed-integration-test-matrix.md  roadmap.md  work-log.md
docs/: appendix.md  appendix_api.md  appendix_architecture.md  appendix_build.md  downloads.md  faq.md  features.md  glossary.md  index.md  llms.txt  name-o-tron-9000-first-commits.md  name-o-tron-9000-safety.md  plex-folder-structure.md  plex-renamer-developer-guide.md  plex-renamer-overview.md  plex-renamer-settings.md  releases.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/linux/: com.lenivec.name-o-tron-9000.desktop.hbs  com.lenivec.name-o-tron-9000.metainfo.xml  name-o-tron-9000.desktop.hbs  name-o-tron-9000.metainfo.xml
src-tauri/src/: diagnostics.rs  lib.rs  logging.rs  main.rs  path_map.rs  path_map_tests.rs  plex_api.rs  plex_auth.rs  rename_types.rs  secure.rs  settings.rs  subtitle.rs  video_rename.rs
src-tauri/src/video_rename/: apply.rs  common.rs  destinations.rs  editions.rs  episode_tokens.rs  episodes.rs  movies.rs  organize.rs  sanitize.rs  template.rs  tests.rs  types.rs
src-tauri/tests/: integration_tests.rs  mock_plex_harness_tests.rs  settings_tests.rs
src-tauri/tests/fixtures/mock_plex/: README.md  movie_basic_rename.json  movie_conflict_existing_target.json  movie_with_subtitle.json
(+118 files in other folders)
