[package]
name = "name-o-tron-9000"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "name_o_tron_9000_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
keyring = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
quick-xml = { version = "0.31", features = ["serialize"] }
whoami = "1.5"
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
base64 = "0.22"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
unicode-normalization = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
local-ip-address = "0.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serde_json = "1"
futures = "0.3"
tempfile = "3.8"
